<resources>
    <string name="app_name">Care Coordinator</string>
    <string name="action_settings">Settings</string>
    <string name="none">No Info</string>
    <string name="refresh">Refresh</string>

    <string name="pending">Pending</string>
    <string name="closed">Closed</string>
    <string name="patient_gender">Gender:</string>
    <string name="patient_dob">DOB:</string>
    <string name="patient_address">Address:</string>
    <string name="patient_name">Patient:</string>
    <string name="patient_age">Age:</string>
    <string name="care_plan_condition_label">Addresses:</string>
    <string name="care_plan_goal_label">Goal:</string>
    <string name="care_plan_goal_text">%1$s of %2$s</string>
    <string name="care_plan_period_label">Duration:</string>
    <string name="care_plan_physician_name">Dr. %1$s</string>
    <string name="physician_name">Physician:</string>
    <string name="patient_care_plans">Care Plans:</string>
    <string name="patient_id2">Patient ID:</string>
    <string name="care_plan_id">Care Plan ID:</string>
    <string name="details">Details:</string>
    <string name="care_plan_type">Plan Type:</string>
    <string name="suggested_communities">Suggested Communities</string>
    <string name="clicked">Clicked</string>
    <string name="unclicked">Unclicked</string>

    <string name="patient_email_button">Email Patient</string>
    <string name="patient_count">"%1$d patient%2$s"</string>
    <string name="community_image_description">Community Image</string>
    <string name="name_label">Name:</string>
    <string name="patient_count_label">Number of Patients:</string>
    <string name="address_label">Address:</string>
    <string name="phone_number_label">Phone Number:</string>
    <string name="email_label">Email:</string>
    <string name="patient_num_care_plans_text">"%1$s Care Plan%2$s"</string>

    <string name="search_title">Search</string>
    <string name="search_hint">Search communities</string>
    <string name="sort_title">Sort</string>
    <string name="sort_menu_name">Sort by name</string>
    <string name="sort_menu_popularity">Sort by popularity</string>
    <string name="sort_menu_distance">Sort by distance</string>

    <string name="email_menu_title">Select the Email Type</string>
    <string name="email_select_contact">Initial Contact</string>
    <string name="email_select_suggestions">Initial Suggestions</string>
    <string name="email_select_followup">General Followup</string>
    <string name="email_select_referral">Final Referral</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_selection">No Item Selected</string>

    <!-- Default email for main nav view display -->
    <string name="coordinator_email">cdc_coordinator@gmail.com</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Not signed in</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="filter_title">Filter Community</string>
    <string name="opendays_label">Open Days:</string>
    <string name="hours_label">Hours:</string>
    <string name="no_patient_text">No Connected Patients</string>
    <string name="connected_patients_text">Connected Patients</string>
    <string name="community_map">Community Map</string>
    <string name="no_patient_description">No patients</string>
</resources>
