<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.gatech.johndoe.carecoordinator.MainActivity">

    <item
        android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_white_36dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView"
        android:visible="false" />

    <item
        android:id="@+id/sort"
        android:title="@string/sort_title"
        android:icon="@drawable/ic_sort_white_36dp"
        app:showAsAction="collapseActionView|ifRoom"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/menuSortName"
                android:title="@string/sort_menu_name" />
            <item
                android:id="@+id/menuSortPopularity"
                android:title="@string/sort_menu_popularity" />
            <item
                android:id="@+id/menuSortDistance"
                android:title="@string/sort_menu_distance" />
        </menu>
    </item>

    <item
        android:id="@+id/filter"
        android:title="@string/filter_title"
        android:icon="@drawable/ic_filter_list_white_36dp"
        app:showAsAction="collapseActionView|ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_menu_refresh"
        app:showAsAction="collapseActionView|ifRoom"
        android:visible="true" />

</menu>
