<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:clickable="true"
    tools:context=".community.UI.CommunityDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/communityImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/community_image_description" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/communityImage"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/name_label" />

        <TextView
            android:id="@+id/communityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/nameLabel"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/nameLabel"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/patientCountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/communityName"
            android:layout_marginTop="12dp"
            android:layout_alignStart="@id/nameLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/patient_count_label" />

        <TextView
            android:id="@+id/patientCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/patientCountLabel"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/patientCountLabel"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/addressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/patientCount"
            android:layout_alignStart="@id/patientCountLabel"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/address_label" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/addressLabel"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/addressLabel"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/phoneNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/address"
            android:layout_alignStart="@id/addressLabel"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/phone_number_label" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/phoneNumberLabel"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/phoneNumberLabel"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/phoneNumber"
            android:layout_alignStart="@id/phoneNumberLabel"
            android:layout_marginTop="12dp"
            android:text="@string/email_label" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_toEndOf="@id/emailLabel"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/emailLabel" />

        <TextView
            android:id="@+id/hoursLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/email"
            android:layout_alignStart="@id/emailLabel"
            android:layout_marginTop="12dp"
            android:text="@string/hours_label" />

        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_toEndOf="@id/hoursLabel"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/hoursLabel" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hours"
            android:layout_alignStart="@id/hoursLabel"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/connectedPatientsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/description"
            android:orientation="vertical">

            <TextView
                android:id="@+id/connectedPatientsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/connected_patients_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/connectedPatientsSeparator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:background="@android:color/darker_gray" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/connectedPatientsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/noPatientTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/no_patient_text"
                android:textSize="20sp"
                android:visibility="gone" />

        </LinearLayout>

        <ImageView
            android:id="@+id/mapImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="500dp"
            android:maxHeight="500dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/connectedPatientsLayout"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/community_map" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
