<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:colorBackground"
    android:clickable="true"
    tools:context=".patient.UI.PatientDetailFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/patient_name_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignStart="@id/patient_name_label"
            android:text="@string/patient_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/patient_name"
            android:textSize="20sp"
            android:layout_toEndOf="@id/patient_name_label"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/patient_name_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/patient_gender_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/patient_name"
            android:layout_alignStart="@id/patient_name_label"
            android:layout_marginTop="12dp"
            android:text="@string/patient_gender" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/patient_gender"
            android:textSize="20sp"
            android:layout_toEndOf="@id/patient_gender_label"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/patient_gender_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/patient_age_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/patient_gender"
            android:layout_alignStart="@id/patient_gender_label"
            android:layout_marginTop="12dp"
            android:text="@string/patient_age" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/patient_age"
            android:textSize="20sp"
            android:layout_toEndOf="@id/patient_age_label"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/patient_age_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/patient_dob_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/patient_age"
            android:layout_alignStart="@id/patient_age_label"
            android:layout_marginTop="12dp"
            android:text="@string/patient_dob" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/patient_dob"
            android:textSize="20sp"
            android:layout_toEndOf="@id/patient_dob_label"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/patient_dob_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/patient_address_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/patient_dob"
            android:layout_alignStart="@id/patient_dob_label"
            android:layout_marginTop="12dp"
            android:text="@string/patient_address" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/patient_address_first_line"
            android:textColor="#003bfc"
            android:textSize="20sp"
            android:layout_toEndOf="@id/patient_address_label"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/patient_address_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/patient_address_second_line"
            android:textColor="#003bfc"
            android:textSize="20sp"
            android:layout_below="@id/patient_address_first_line"
            android:layout_alignStart="@id/patient_address_first_line"
            android:layout_marginTop="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/patient_email_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/patient_address_second_line"
            android:layout_alignStart="@id/patient_address_label"
            android:layout_marginTop="12dp"
            android:text="@string/email_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/patient_email"
            android:textColor="#003bfc"
            android:textSize="20sp"
            android:layout_toEndOf="@id/patient_email_label"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/patient_email_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/patient_phone_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/patient_email"
            android:layout_alignStart="@id/patient_email_label"
            android:layout_marginTop="12dp"
            android:text="@string/physician_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/patient_phone"
            android:textColor="#003bfc"
            android:textSize="20sp"
            android:layout_toEndOf="@id/patient_phone_label"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/patient_phone_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/patient_care_plans_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/patient_phone"
            android:layout_alignStart="@id/patient_phone_label"
            android:layout_marginTop="12dp"
            android:text="@string/patient_care_plans" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/patient_care_plans_label"
            android:layout_alignStart="@id/patient_care_plans_label"
            android:layout_marginTop="12dp"
            android:id="@+id/patient_care_plan_list" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_dialog_email" />
    </RelativeLayout>


</LinearLayout>